[package]
authors = ["Jacob Brown <kardeiz@gmail.com>"]
edition = "2018"
name = "oai"
version = "0.2.0"
license = "MIT"
description = "OAI harvester for Rust - more coming soon"

[dependencies]
bytes = "0.5"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
reqwest = "0.10"
roxmltree = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.5"
url = "2"

[dev-dependencies]
tokio = "0.2.0-alpha.6"
