[package]
authors = ["Jacob Brown <kardeiz@gmail.com>"]
edition = "2018"
name = "oai"
version = "0.3.2"
license = "MIT"
description = "OAI harvester for Rust - more coming soon"

[features]
default = ["reqwest/default-tls"]

[dependencies]
bytes = "0.5"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
reqwest = { version = "0.10", default-features = false }
roxmltree = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.5"
url = "2"

[dev-dependencies]
tokio = { version = "0.2.11", features = ["full"] }
